[gd_scene load_steps=2 format=2]

[ext_resource path="res://Calc. BrRuffini.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Grau" type="Label" parent="."]
margin_left = 49.0
margin_top = 43.0
margin_right = 149.0
margin_bottom = 57.0
text = "Grau"
align = 1

[node name="ButtonGrau" type="Button" parent="Grau"]
margin_top = 85.0
margin_right = 100.0
margin_bottom = 105.0
text = "Prima"

[node name="InputGrau" type="LineEdit" parent="Grau"]
margin_top = 22.0
margin_right = 100.0
margin_bottom = 72.0
align = 1

[node name="Array" type="Label" parent="."]
margin_left = 252.0
margin_top = 43.0
margin_right = 438.0
margin_bottom = 57.0
align = 1

[node name="ButtonArray" type="Button" parent="Array"]
margin_top = 85.0
margin_right = 186.0
margin_bottom = 105.0
text = "Prima"

[node name="InputArray" type="LineEdit" parent="Array"]
margin_top = 22.0
margin_right = 186.0
margin_bottom = 72.0
align = 1

[connection signal="pressed" from="Grau/ButtonGrau" to="." method="_on_ButtonGrau_pressed"]
